--- a/src/app/ui/card/card.component.html
+++ b/src/app/ui/card/card.component.html
@@ -1,13 +1,15 @@
-<mat-card class="example-card">
+<mat-card class="example-card" [ngClass]="{'card mycard' : !isOdd}">
   <mat-card-header>
+    <span appAcl>|||</span>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>{{ cartData.title }}</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-title>{{ index }}{{ product.title }}</mat-card-title>
+    <mat-card-title>{{ product.price | number: '3.1-5' }}</mat-card-title>
+
   </mat-card-header>
-  <img mat-card-image [src]="cartData.logo" alt="Photo of a Shiba Inu">
+  <img mat-card-image [src]="product.photo" [alt]="product.description">
   <mat-card-content>
     <p>
-      {{ cartData.description }}
+      {{ product.description }}
     </p>
   </mat-card-content>
   <mat-card-actions>
