--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,3 @@
-.wrapper {
-  width: 800px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.cart-wrapper {
-  width: 300px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.card {
-  background: yellow;
-}
+/* .uniq-card {
+  background: blue;
+} */
