--- a/src/app/cart/cart/cart.component.html
+++ b/src/app/cart/cart/cart.component.html
@@ -1,16 +1,20 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>sadas</mat-card-title>
-  </mat-card-header>
-  <!-- <img mat-card-image [src]="product.photo" [alt]="product.description"> -->
-  <mat-card-content>
-    <p>
-      fsdf
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>
+<div *ngFor="let item of cart">
+  <mat-card class="example-card ">
+    <mat-card-header class="uniq-card">
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ item.title }}</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image [src]="item.photo" [alt]="item.description">
+    <mat-card-content>
+      <p>
+       {{ item.description }}
+      </p>
+      <p>AMOUNT {{item.amount}}  </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>INCREASE</button>
+      <button mat-button>DECREASE</button>
+      <button mat-button (click)="removeItem(item.id)">REMOVE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
