--- a/src/app/ui/card/card.component.html
+++ b/src/app/ui/card/card.component.html
@@ -13,7 +13,6 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-button (click)="buy(product)">BUY</button>
   </mat-card-actions>
 </mat-card>
