--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <div class="cart-wrapper">
+    <app-contacts></app-contacts>
+  <!-- <app-contacts></app-contacts>
   <app-products></app-products>
-  <app-cart></app-cart>
+  <app-cart></app-cart> -->
 </div>
 
