--- a/src/app/cart/cart/cart.component.html
+++ b/src/app/cart/cart/cart.component.html
@@ -1,5 +1,5 @@
 <h1>Cart</h1>
-<div *ngFor="let item of cart">
+<div *ngFor="let item of cart$ | async">
   <mat-card class="example-card ">
     <mat-card-header class="uniq-card">
       <div mat-card-avatar class="example-header-image"></div>
